--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ provider:
   name: aws
   runtime: nodejs12.x
   region: us-west-2
-  profile: default
+  profile: personal
   iamRoleStatements:
     - Effect: Allow
       Action:
